--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <p>Hi, my name is M.Hasan Dawood.</p>
-    <p>This is my first surge.sh Website.\nUpdated Version</p>
+    <p>Hi, my name is Muhammad Hasan Dawood.</p>
+    <p>This is my first surge.sh Website.</p>
 </body>
 </html>
